--- a/create_tenant.yaml
+++ b/create_tenant.yaml
@@ -4,7 +4,7 @@
   gather_facts: no
 
   tasks:
-  - name: Add a new tenant
+  - name: Add a new user tenant
     aci_tenant:
       hostname: '{{apic_host}}'
       username: '{{apic_username}}'
